# OniFoxed

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Oni.sln  README.md  cmake_generate_vs2019-x86.cmd  cmake_generate_vs2022-x86.cmd
.github/workflows/: cmake.yml
BungieFrameWork/BFW_Headers/: BFW.h  BFW_Akira.h  BFW_AppUtilities.h  BFW_BinaryData.h  BFW_Bink.h  BFW_BitVector.h  BFW_Collision.h  BFW_CommandLine.h  BFW_Console.h  BFW_DebuggerSymbols.h  BFW_DialogManager.h  BFW_Doors.h  BFW_Effect.h  BFW_EnvParticle.h  BFW_ErrorCodes.h  BFW_FileFormat.h  BFW_FileManager.h  BFW_Group.h  BFW_Image.h  BFW_LocalInput.h  BFW_MasterHeader.h  BFW_Materials.h  BFW_MathLib.h  BFW_Motoko.h  BFW_NetworkManager.h  BFW_Noise.h  BFW_Object.h  BFW_Particle.h  BFW_Particle3.h  BFW_Path.h  BFW_Physics.h  BFW_Platform_AltiVec.h  BFW_Ranma.h  BFW_RedPig.h  BFW_ScriptLang.h  BFW_SoundSystem2.h  BFW_TemplateManager.h  BFW_TextSystem.h  BFW_Timer.h  BFW_Totoro.h  (+4 more)
BungieFrameWork/BFW_Source/BFW_Akira/: Akira_Private.h  BFW_Akira.c  BFW_Akira_Collision.c  BFW_Akira_Render.c  BFW_Akira_Render_AltiVec.c  BFW_Akira_Template.c
BungieFrameWork/BFW_Source/BFW_AppUtilities/: BFW_AppUtilities.c
BungieFrameWork/BFW_Source/BFW_BinaryData/: BFW_BinaryData.c  BFW_BinaryData_Template.c
BungieFrameWork/BFW_Source/BFW_Bink/: BFW_Bink.c
BungieFrameWork/BFW_Source/BFW_Collision/: BFW_Collision.c
BungieFrameWork/BFW_Source/BFW_CommandLine/: BFW_CommandLine.c
BungieFrameWork/BFW_Source/BFW_Console/: BFW_Console.c  BFW_ConsoleVariable.c  BFW_ConsoleVariable.h
BungieFrameWork/BFW_Source/BFW_DebuggerSymbols/: BFW_DebuggerSymbols_MacOS.c  BFW_DebuggerSymbols_Win32.c  stack_walk_windows.c  stack_walk_windows.h
BungieFrameWork/BFW_Source/BFW_DialogManager/: BFW_DMVM_Templates.c  BFW_DialogManager.c  BFW_ViewManager.c  BFW_ViewUtilities.c  BFW_ViewUtilities.h
BungieFrameWork/BFW_Source/BFW_Effect/: BFW_Effect.c  BFW_Effect_Private.h
BungieFrameWork/BFW_Source/BFW_FileFormat/: BFW_FileFormat.c
BungieFrameWork/BFW_Source/BFW_FileManager/: BFW_FileManager_Common.c
BungieFrameWork/BFW_Source/BFW_Group/: BFW_Group.c
BungieFrameWork/BFW_Source/BFW_Image/: BFW_Image.c  BFW_Image_Dither.c  BFW_Image_Draw.c  BFW_Image_PixelConversion.c  BFW_Image_Private.h  BFW_Image_Scale_Box.c
BungieFrameWork/BFW_Source/BFW_LocalInput/: BFW_LI_Platform.h  BFW_LI_Private.h  BFW_LI_Translators.c  BFW_LocalInput.c  BFW_LocalInput_Template.c
BungieFrameWork/BFW_Source/BFW_Materials/: BFW_Materials.c
BungieFrameWork/BFW_Source/BFW_MathLib/: BFW_MathLib.c  BFW_MathLib_Matrix.c  Decompose.c  Decompose.h  EulerAngles.c  EulerAngles.h  bfw_math.c  bfw_math.h  bfw_math_3dnow.c  bfw_math_stdc.c
BungieFrameWork/BFW_Source/BFW_NetworkManager/: BFW_NetworkManager.c
BungieFrameWork/BFW_Source/BFW_Object/: BFW_Doors.c  BFW_Object.c  BFW_Object_Templates.h  BFW_Physics.c
BungieFrameWork/BFW_Source/BFW_Particle/: BFW_Decal.c  BFW_EnvParticle.c  BFW_Particle3.c
BungieFrameWork/BFW_Source/BFW_Path/: BFW_Path.c
BungieFrameWork/BFW_Source/BFW_ScriptLang/: BFW_ScriptLang.c  BFW_ScriptLang_Context.c  BFW_ScriptLang_Context.h  BFW_ScriptLang_Database.c  BFW_ScriptLang_Database.h  BFW_ScriptLang_Error.c  BFW_ScriptLang_Error.h  BFW_ScriptLang_Eval.c  BFW_ScriptLang_Eval.h  BFW_ScriptLang_Expr.c  BFW_ScriptLang_Expr.h  BFW_ScriptLang_Parse.c  BFW_ScriptLang_Parse.h  BFW_ScriptLang_Private.h  BFW_ScriptLang_Scheduler.c  BFW_ScriptLang_Scheduler.h  BFW_ScriptLang_Token.c  BFW_ScriptLang_Token.h
BungieFrameWork/BFW_Source/BFW_Shared/: BFW_Shared_Camera.h  BFW_Shared_Clip.c  BFW_Shared_Clip.h  BFW_Shared_ClipCompPoint_c.h  BFW_Shared_ClipPoly_c.h  BFW_Shared_Math.c  BFW_Shared_Math.h  BFW_Shared_TriRaster.h  BFW_Shared_TriRaster_c.h
BungieFrameWork/BFW_Source/BFW_SoundSystem/: BFW_SS2_RegisterTemplate.c  BFW_SS_Private.h
BungieFrameWork/BFW_Source/BFW_SoundSystem2/: BFW_SS2_IMA.c  BFW_SS2_IMA.h  BFW_SS2_MSADPCM.c  BFW_SS2_MSADPCM.h  BFW_SS2_Platform.h  BFW_SS2_Private.h  BFW_SS2_RegisterTemplate.c  BFW_SoundSystem2.c
BungieFrameWork/BFW_Source/BFW_TemplateManager/: BFW_TM_Common.c  BFW_TM_Construction.c  BFW_TM_Construction.h  BFW_TM_Game.c  BFW_TM_Private.h  BFW_TemplateManager.c
BungieFrameWork/BFW_Source/BFW_TextSystem/: BFW_TS_Private.h  BFW_TextSystem.c  BFW_TextSystem_Template.c
BungieFrameWork/BFW_Source/BFW_Totoro/: BFW_Totoro.c  BFW_Totoro_Private.h  BFW_Totoro_Template.c
BungieFrameWork/BFW_Source/BFW_Utility/: BFW_BitVector.c  BFW_Error.c  BFW_Error.h  BFW_Memory.c  BFW_Memory.h  BFW_Noise.c  BFW_Platform.h  BFW_Preferences.c  BFW_Preferences.h  BFW_String.c  BFW_Timer.c  BFW_Utility.c
BungieFrameWork/BFW_Source/BFW_WindowManager/: BFW_WindowManager.c  BFW_WindowManager_Private.h  BFW_WindowManager_Public.h
OniProj/: TemplateFileList.txt
OniProj/OniCMakeProjs/BinkProj/: CMakeLists.txt  binkw32.def
OniProj/OniCMakeProjs/OniProj/: CMakeLists.txt
OniProj/OniCMakeProjs/TEVCProj/: CMakeLists.txt
OniProj/OniGameSource/: ONI_Character.c  ONI_Character.h  Oni.c  Oni.h  Oni_Action.h  Oni_Aiming.c  Oni_Aiming.h  Oni_Bink.c  Oni_Bink.h  Oni_Camera.c  Oni_Camera.h  Oni_Character.c  Oni_Character.h  Oni_Character_Animation.h  Oni_Cinematics.c  Oni_Cinematics.h  Oni_Combos.c  Oni_Combos.h  Oni_Command.h  Oni_DataConsole.c  Oni_DataConsole.h  Oni_Dialogs.c  Oni_Dialogs.h  Oni_Event.c  Oni_Event.h  Oni_FX.c  Oni_FX.h  Oni_Film.c  Oni_Film.h  Oni_Game.h  Oni_GameSettings.c  Oni_GameSettings.h  Oni_GameState.c  Oni_GameState.h  Oni_GameStatePrivate.h  Oni_ImpactEffect.c  Oni_ImpactEffect.h  Oni_InGameUI.c  Oni_InGameUI.h  Oni_InputBindings.h  (+44 more)
OniProj/OniGameSource/Oni_AI/: Oni_AI.c  Oni_AI.h  Oni_AI2.c  Oni_AI2.h  Oni_AI2_Alarm.c  Oni_AI2_Alarm.h  Oni_AI2_Alert.c  Oni_AI2_Alert.h  Oni_AI2_Combat.c  Oni_AI2_Combat.h  Oni_AI2_Error.c  Oni_AI2_Error.h  Oni_AI2_Executor.c  Oni_AI2_Executor.h  Oni_AI2_Fight.c  Oni_AI2_Fight.h  Oni_AI2_Guard.c  Oni_AI2_Guard.h  Oni_AI2_Idle.c  (+40 more)
OniProj/OniMWProjects/: Oni_Film.h
OniProj/OniResources/: OniResources.rc  resource.h
OniProj/OniWin32Projs/: OniVCDirectories.txt
(+632 files in other folders)
